; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_oggdec.c_ogg_reset.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_oggdec.c_ogg_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__*, i32, %struct.ogg* }
%struct.TYPE_4__ = type { i64 }
%struct.ogg = type { i32, i32, i32, %struct.ogg_stream* }
%struct.ogg_stream = type { i32, i32, i64, i32, i64, i8*, i64, i64, i64, i64, i64, i8*, i64, i64, i64 }

@AV_NOPTS_VALUE = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*)* @ogg_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ogg_reset(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca %struct.ogg*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca %struct.ogg_stream*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 2
  %9 = load %struct.ogg*, %struct.ogg** %8, align 8
  store %struct.ogg* %9, %struct.ogg** %3, align 8
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 8
  %13 = call i64 @avio_tell(i32 %12)
  store i64 %13, i64* %5, align 8
  store i32 0, i32* %4, align 4
  br label %14

14:                                               ; preds = %71, %1
  %15 = load i32, i32* %4, align 4
  %16 = load %struct.ogg*, %struct.ogg** %3, align 8
  %17 = getelementptr inbounds %struct.ogg, %struct.ogg* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = icmp slt i32 %15, %18
  br i1 %19, label %20, label %74

20:                                               ; preds = %14
  %21 = load %struct.ogg*, %struct.ogg** %3, align 8
  %22 = getelementptr inbounds %struct.ogg, %struct.ogg* %21, i32 0, i32 3
  %23 = load %struct.ogg_stream*, %struct.ogg_stream** %22, align 8
  %24 = load i32, i32* %4, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds %struct.ogg_stream, %struct.ogg_stream* %23, i64 %25
  store %struct.ogg_stream* %26, %struct.ogg_stream** %6, align 8
  %27 = load %struct.ogg_stream*, %struct.ogg_stream** %6, align 8
  %28 = getelementptr inbounds %struct.ogg_stream, %struct.ogg_stream* %27, i32 0, i32 14
  store i64 0, i64* %28, align 8
  %29 = load %struct.ogg_stream*, %struct.ogg_stream** %6, align 8
  %30 = getelementptr inbounds %struct.ogg_stream, %struct.ogg_stream* %29, i32 0, i32 13
  store i64 0, i64* %30, align 8
  %31 = load %struct.ogg_stream*, %struct.ogg_stream** %6, align 8
  %32 = getelementptr inbounds %struct.ogg_stream, %struct.ogg_stream* %31, i32 0, i32 12
  store i64 0, i64* %32, align 8
  %33 = load %struct.ogg_stream*, %struct.ogg_stream** %6, align 8
  %34 = getelementptr inbounds %struct.ogg_stream, %struct.ogg_stream* %33, i32 0, i32 0
  store i32 -1, i32* %34, align 8
  %35 = load i8*, i8** @AV_NOPTS_VALUE, align 8
  %36 = load %struct.ogg_stream*, %struct.ogg_stream** %6, align 8
  %37 = getelementptr inbounds %struct.ogg_stream, %struct.ogg_stream* %36, i32 0, i32 5
  store i8* %35, i8** %37, align 8
  %38 = load i8*, i8** @AV_NOPTS_VALUE, align 8
  %39 = load %struct.ogg_stream*, %struct.ogg_stream** %6, align 8
  %40 = getelementptr inbounds %struct.ogg_stream, %struct.ogg_stream* %39, i32 0, i32 11
  store i8* %38, i8** %40, align 8
  %41 = load %struct.ogg_stream*, %struct.ogg_stream** %6, align 8
  %42 = getelementptr inbounds %struct.ogg_stream, %struct.ogg_stream* %41, i32 0, i32 1
  store i32 -1, i32* %42, align 4
  %43 = load %struct.ogg_stream*, %struct.ogg_stream** %6, align 8
  %44 = getelementptr inbounds %struct.ogg_stream, %struct.ogg_stream* %43, i32 0, i32 10
  store i64 0, i64* %44, align 8
  %45 = load %struct.ogg_stream*, %struct.ogg_stream** %6, align 8
  %46 = getelementptr inbounds %struct.ogg_stream, %struct.ogg_stream* %45, i32 0, i32 9
  store i64 0, i64* %46, align 8
  %47 = load %struct.ogg_stream*, %struct.ogg_stream** %6, align 8
  %48 = getelementptr inbounds %struct.ogg_stream, %struct.ogg_stream* %47, i32 0, i32 8
  store i64 0, i64* %48, align 8
  %49 = load %struct.ogg_stream*, %struct.ogg_stream** %6, align 8
  %50 = getelementptr inbounds %struct.ogg_stream, %struct.ogg_stream* %49, i32 0, i32 7
  store i64 0, i64* %50, align 8
  %51 = load %struct.ogg_stream*, %struct.ogg_stream** %6, align 8
  %52 = getelementptr inbounds %struct.ogg_stream, %struct.ogg_stream* %51, i32 0, i32 6
  store i64 0, i64* %52, align 8
  %53 = load i64, i64* %5, align 8
  %54 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %55 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %54, i32 0, i32 0
  %56 = load %struct.TYPE_4__*, %struct.TYPE_4__** %55, align 8
  %57 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %56, i32 0, i32 0
  %58 = load i64, i64* %57, align 8
  %59 = icmp sle i64 %53, %58
  br i1 %59, label %60, label %63

60:                                               ; preds = %20
  %61 = load %struct.ogg_stream*, %struct.ogg_stream** %6, align 8
  %62 = getelementptr inbounds %struct.ogg_stream, %struct.ogg_stream* %61, i32 0, i32 5
  store i8* null, i8** %62, align 8
  br label %63

63:                                               ; preds = %60, %20
  %64 = load %struct.ogg_stream*, %struct.ogg_stream** %6, align 8
  %65 = getelementptr inbounds %struct.ogg_stream, %struct.ogg_stream* %64, i32 0, i32 4
  store i64 0, i64* %65, align 8
  %66 = load %struct.ogg_stream*, %struct.ogg_stream** %6, align 8
  %67 = getelementptr inbounds %struct.ogg_stream, %struct.ogg_stream* %66, i32 0, i32 3
  %68 = call i32 @av_freep(i32* %67)
  %69 = load %struct.ogg_stream*, %struct.ogg_stream** %6, align 8
  %70 = getelementptr inbounds %struct.ogg_stream, %struct.ogg_stream* %69, i32 0, i32 2
  store i64 0, i64* %70, align 8
  br label %71

71:                                               ; preds = %63
  %72 = load i32, i32* %4, align 4
  %73 = add nsw i32 %72, 1
  store i32 %73, i32* %4, align 4
  br label %14

74:                                               ; preds = %14
  %75 = load %struct.ogg*, %struct.ogg** %3, align 8
  %76 = getelementptr inbounds %struct.ogg, %struct.ogg* %75, i32 0, i32 1
  store i32 -1, i32* %76, align 4
  %77 = load %struct.ogg*, %struct.ogg** %3, align 8
  %78 = getelementptr inbounds %struct.ogg, %struct.ogg* %77, i32 0, i32 2
  store i32 -1, i32* %78, align 8
  ret i32 0
}

declare dso_local i64 @avio_tell(i32) #1

declare dso_local i32 @av_freep(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
